@@ -1,3 +1,8 @@
+2000-12-07  Ben Elliston  <bje@redhat.com>
+
+	* sim-decode.scm (-gen-extract-case): Do not emit a definition for
+	"insn" when there are zero ifields to extract.
+
 2000-12-04  Frank Ch. Eigler  <fche@redhat.com>
 
 	* utils-sim.scm (gen-define-argbuf-macro): Handle sfmt=#f case, to be
